--- a/index.html
+++ b/index.html
@@ -9,88 +9,90 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-<main>
+<header>
     <h1>Pokedex</h1>
+</header>
+<main>
     <div class="container-card d-flex">
         <div class="card">
             <img src="images/square.jpg" alt="Bulbazar" title="Bulbazar">
-                <h2>Bulbazar</h2>
+            <h2>Bulbazar</h2>
             <p>
-                <button class="grass">Grass</button>
-                <button class="poison">Poison</button>
+                <button class="btn grass">Grass</button>
+                <button class="btn poison">Poison</button>
             </p>
         </div>
         <div class="card">
             <img src="images/square.jpg" alt="Charmander" title="Charmander">
             <h2>Charmander</h2>
             <p>
-                <button class="fire">Fire</button>
+                <button class=" btn fire">Fire</button>
             </p>
         </div>
         <div class="card">
             <img src="images/square.jpg" alt="Pikachu" title="Pikachu">
             <h2>Pikachu</h2>
             <p>
-                <button class="electric">Electric</button>
+                <button class="btn electric">Electric</button>
             </p>
         </div>
         <div class="card">
             <img src="images/square.jpg" alt="Bulbazar" title="Bulbazar">
             <h2>Bulbazar</h2>
             <p>
-                <button class="grass">Grass</button>
-                <button class="poison">Poison</button>
+                <button class="btn grass">Grass</button>
+                <button class="btn poison">Poison</button>
             </p>
         </div>
         <div class="card">
             <img src="images/square.jpg" alt="Charmander" title="Charmander">
             <h2>Charmander</h2>
             <p>
-                <button class="fire">Fire</button>
+                <button class="btn fire">Fire</button>
             </p>
         </div>
         <div class="card">
             <img src="images/square.jpg" alt="Pikachu" title="Pikachu">
             <h2>Pikachu</h2>
             <p>
-                <button class="electric">Electric</button>
+                <button class="btn electric">Electric</button>
             </p>
         </div>
         <div class="card">
             <img src="images/square.jpg" alt="Bulbazar" title="Bulbazar">
             <h2>Bulbazar</h2>
             <p>
-                <button class="grass">Grass</button>
-                <button class="poison">Poison</button>
+                <button class="btn grass">Grass</button>
+                <button class="btn poison">Poison</button>
             </p>
         </div>
         <div class="card">
             <img src="images/square.jpg" alt="Charmander" title="Charmander">
             <h2>Charmander</h2>
             <p>
-                <button class="fire">Fire</button>
+                <button class="btn fire">Fire</button>
             </p>
         </div>
         <div class="card">
             <img src="images/square.jpg" alt="Pikachu" title="Pikachu">
             <h2>Pikachu</h2>
             <p>
-                <button class="electric">Electric</button>
+                <button class="btn electric">Electric</button>
             </p>
         </div>
         <div class="card">
             <img src="images/square.jpg" alt="Bulbazar" title="Bulbazar">
             <h2>Bulbazar</h2>
             <p>
-                <button class="grass">Grass</button>
-                <button class="poison">Poison</button>
+                <button class="btn grass">Grass</button>
+                <button class="btn poison">Poison</button>
             </p>
         </div>
         <div class="card">
             <img src="images/square.jpg" alt="Charmander" title="Charmander">
             <h2>Charmander</h2>
             <p>
-                <button class="fire">Fire</button>
+                <button class="btn fire">Fire</button>
             </p>
         </div>
         <div class="card">
@@ -98,12 +100,56 @@
             <p>
             <h2>Pikachu</h2>
             <p>
-                <button class="electric">Electric</button>
+                <button class="btn electric">Electric</button>
             </p>
         </div>
         <p class="container-fluid">
-            <button class=" btn btn-primary main-button"><strong>Load More</strong></button>
+            <button class=" btn btn-primary main-button">
+                <strong>Load More</strong>
+            </button>
         </p>
+    </div>
+    <div class="option-card">
+        <img src="images/square.jpg">
+        <h2><strong>Charmander #004</strong></h2>
+        <table>
+            <tbody>
+            <tr>
+                <td>Type</td>
+                <td>Fire</td>
+            </tr>
+            <tr>
+                <td>Attack</td>
+                <td>52</td>
+            </tr>
+            <tr>
+                <td>Attack</td>
+                <td>52</td>
+            </tr>
+            <tr>
+                <td>Attack</td>
+                <td>52</td>
+            </tr>
+            <tr>
+                <td>Attack</td>
+                <td>52</td>
+            </tr>
+            <tr>
+                <td>Attack</td>
+                <td>52</td>
+            </tr>
+            <tr><td>Attack</td>
+                <td>52</td></tr>
+            <tr>
+                <td>Attack</td>
+                <td>52</td>
+            </tr>
+            <tr>
+                <td>Attack</td>
+                <td>52</td>
+            </tr>
+            </tbody>
+        </table>
     </div>
 </main>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
